# seed-realworld-darklang

./: CHANGELOG.md  LICENSE  README.md  package.json
.github/workflows/: main.yml
configs/: webpack.config.js
crate/: Cargo.toml
crate/src/: lib.rs  page.rs  request.rs  route.rs
crate/src/entity/: author.rs  form.rs
crate/src/page/: article.rs  article_editor.rs  home.rs  login.rs  not_found.rs  profile.rs  register.rs  settings.rs
crate/src/request/: author.rs
crate/src/request/article/: create.rs  load.rs  load_for_editor.rs  update.rs
crate/src/request/comment/: create.rs  delete.rs  load_list.rs
crate/src/request/favorite/: favorite.rs  unfavorite.rs
crate/src/request/feed/: load_for_home.rs  load_for_profile.rs
crate/src/request/follow/: follow.rs  unfollow.rs
entries/: index.hbs  index.ts
entries/templates/: loading_page.hbs  social_media.hbs  stylesheets.hbs
