[package]
version = "0.1.0"
name = "seed-realworld-darklang"
repository = "https://github.com/MartinKavik/seed-realworld-darklang"
authors = ["Martin Kavík <martin@kavik.cz>"]
description = "Seed Realworld example with Dark lang as the backend"
categories = ["wasm", "rust", "seed", "realworld", "website", "darklang"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "^0.3.8"

[dependencies]
wasm-bindgen = "^0.2.58"
seed = "0.5.1"
fixed-vec-deque = "0.1.8"

[dependencies.web-sys]
version = "^0.3.35"
features = [
  "ScrollToOptions",
  "Navigator",
]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
